implement multiple template support add openapi and postman collections add minor dependency updates